# YABC

./: CMakeLists.txt  README.md
include/: Application.h  Components.h  Game.h
include/edb/: Component.h  Entity.h  EntityDb.h  Storage.h  System.h
include/math/: Vec2.h
include/systems/: InputSystem.h  RenderSystem.h
src/: Application.cpp  Game.cpp  main.cpp
src/edb/: EntityDb.cpp  System.cpp
src/math/: Vec2.cpp
src/systems/: InputSystem.cpp  RenderSystem.cpp
